arreglando los problemas con componente locales

--- a/clase2/template/index.html
+++ b/clase2/template/index.html
@@ -14,40 +14,68 @@
       <pre>{{$data}}</pre>
     
   </div>
+  <template id="showss">
+      <div>
+          <h2>plantilla en el atributo template del componente segundo metodo</h2>
+          <h3>Shows tv maze</h3>
+          <ul>
+              <li v-for="show in shows"> {{show.name}}</li>
+          </ul>
+
+      </div>
+  </template>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script>
-        Vue.component('shows', {
-            template : `
-        <div>
-        <h2>Componente global </h2>
-        <h3>Shows tv maze</h3>
-        <ul>
-            <li v-for="show in shows"> {{show.name}}</li>
-        </ul>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script>
+      Vue.component('shows', {
+          template :`
+              <div>
+                <h2>plantilla en el atributo template primer metodo</h2>
+                <h3>Shows tv maze</h3>
+                  <ul>
+                     <li v-for="show in shows"> {{show.name}}</li>
+                 </ul>
 
-        </div>
-    `,
-            mounted(){
-                axios.get('http://api.tvmaze.com/shows').then(res=>{
-                    console.log(res)
-                    this.shows = res.data
-                })
-            },
-            data(){
-                return{
-                    shows: []
-                }
-            }
+             </div>
+            `,
+          mounted(){
+              axios.get('http://api.tvmaze.com/shows').then(res=>{
+                  console.log(res);
+                  this.shows = res.data
+              })
+          },
+          data(){
+              return{
+                  shows: []
+              }
+          }
 
-        })
+      });
 
-        const mv = new Vue({
-            el: '#app'
-        })
-    
-    
-    </script>
+      /*segundo metodo*/
+      Vue.component('showss', {
+          template :'#showss',
+          mounted(){
+              axios.get('http://api.tvmaze.com/shows').then(res=>{
+                  console.log(res);
+                  this.shows = res.data
+              })
+          },
+          data(){
+              return{
+                  shows: []
+              }
+          }
+
+      });
+
+
+      const mv = new Vue({
+          el: '#app'
+      })
+
+
+  </script>
 </body>
 </html>
